database getData, saveData created, list.js and read.js created as well. create.js needs some work.

--- a/src/views/thing.pug
+++ b/src/views/thing.pug
@@ -1,3 +1,10 @@
+
 div
   each thing in things
     span= thing
+
+  form(action="/", method="get") Our to do
+    br
+    input(type="text", id="title", name="titletoo" value="Title")
+
+    button(type="submit", id="create", value="Create") Create
