--- a/src/views/landing.pug
+++ b/src/views/landing.pug
@@ -7,11 +7,10 @@ h1 Welcome to DIDID
 .listing
   each todo in todos
     .task
-      input(type='checkbox', data-id=`${todo.id}`, checked='checked')
+      input(type='checkbox', data-id=`${todo.id}`, id="complete", unchecked='true')
       span
         span.title(data-id=`${todo.id}`)= todo.title
-
-      a(class='delete', data-id=`${todo.id}`, href='#') Delete
+      button(class='delete', data-id=`${todo.id}` id='delete-action') X
 
 .legend
   div
