--- a/src/views/landing.pug
+++ b/src/views/landing.pug
@@ -7,8 +7,13 @@ h1 Welcome to DIDID
 .listing
   each todo in todos
     .task
-      input(type='checkbox', data-id=`${todo.id}`, checked=todo.completed)
-      
+      input(type='checkbox', data-id=`${todo.id}`, checked=todo.complete)
+      span.checkbox(data-id=`${todo.id}`, data-complete=`${todo.complete}`, style="padding: 8px")
+        if( todo.complete )
+          | ✔️
+        else
+          | 😑
+
       span
         span.title(data-id=`${todo.id}`)= todo.title
 
