--- a/src/views/landing.pug
+++ b/src/views/landing.pug
@@ -1,30 +1,33 @@
-h1 Welcome to DIDIᗡ
+h1.text-center Welcome to DIDIᗡ
+
+p.lead.text-center  Welcome to DIDIᗡ ("Did it") helping you achieve more than mediocrity. Please add tasks below. To edit the task title, click on the task's text. 
+
+h2.text-center
+  span.label.label-success(style='margin-left: 12px;')= `${percentComplete}% Complete`
 
 .add-task
-  input(type='text', name='new-item-title', id='new-item-title')
-  button Add Task
+  form.form-inline(style='margin-bottom: 10px;')
+    .form-group
+      input.form-control(type='text', name='new-item-title', id='new-item-title', placeholder= 'New Task Name')
 
-.listing
+    button.btn.btn-info(type='submit') Add Task
+
+ul.list-group
   each todo in todos
-    .task
-      input(type='checkbox', data-id=`${todo.id}`, checked=todo.complete)
-      span.checkbox(data-id=`${todo.id}`, data-complete=`${todo.complete}`, style="padding: 8px")
+    li.list-group-item
+      span(style='margin-right: 7px;')
         if( todo.complete )
-          | ✔️
+          span.pull-left.checkbox.glyphicon.glyphicon-check(data-id=`${todo.id}`, data-complete=`${todo.complete}`, style='margin-top: 0px; font-size: 18px;')
         else
-          | 😑
+          span.pull-left.checkbox.glyphicon.glyphicon-unchecked(data-id=`${todo.id}`, data-complete=`${todo.complete}`, style='margin-top: 0px; font-size: 18px;')
 
       span
-        span.title(data-id=`${todo.id}`)= todo.title
+        span.title(data-id=`${todo.id}`, value=`${todo.title}`)= todo.title
 
-      button(class='delete', data-id=`${todo.id}`) X
-      button(class='up', data-id=`${todo.id}`) +
-      button(class='down', data-id=`${todo.id}`) -
-
-.legend
-  div
-  | Edit
-  div
-  | Delete
-  div
-  | Add
+      .btn-group.btn-group-xs.pull-right(role='group')
+        button.up.btn.btn-default(type='button', data-id=`${todo.id}`)
+          span.glyphicon.glyphicon-arrow-up(aria-hidden='true', data-id=`${todo.id}`)
+        button.down.btn.btn-default(type='button', data-id=`${todo.id}`)
+          span.glyphicon.glyphicon-arrow-down(aria-hidden='true', data-id=`${todo.id}`)
+        button.delete.btn.btn-danger(type='button', data-id=`${todo.id}`) 
+          span.glyphicon.glyphicon-ban-circle(aria-hidden='true', data-id=`${todo.id}`)
